.infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /blue(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: todoapp-service
                port:
                  number: 80
